--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,15 +8,17 @@
     <fragment
         android:id="@+id/listingFragment"
         android:name="org.firehound.wtplus.ui.home.ListingFragment"
-        android:label="fragment_listing"
-        tools:layout="@layout/fragment_listing" >
+        android:label="Reservations"
+        tools:layout="@layout/fragment_listing">
         <action
             android:id="@+id/action_listingFragment_to_productDetailsFragment"
-            app:destination="@id/productDetailsFragment" />
+            app:destination="@id/productDetailsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/productDetailsFragment"
         android:name="org.firehound.wtplus.ui.home.ProductDetailsFragment"
-        android:label="fragment_product_details"
+        android:label="Product Details"
         tools:layout="@layout/fragment_product_details" />
 </navigation>
