--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -26,6 +26,8 @@
                 <com.smarteist.autoimageslider.SliderView
                     android:id="@+id/image_slider"
                     android:layout_width="0dp"
+                    android:transitionName="image_transition"
+                    app:layout_collapseMode="parallax"
                     android:layout_height="400dp"
                     android:layout_marginBottom="32dp"
                     app:layout_constraintEnd_toEndOf="parent"
