--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -57,7 +57,7 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="16dp"
                     android:fontFamily="@font/gilroy_medium"
-                    android:textColor="@color/black"
+                    android:textColor="@android:color/black"
                     android:textSize="28sp"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/gilroy_semibold"
-                    android:textColor="@color/black"
+                    android:textColor="@android:color/black"
                     android:textSize="24sp"
                     app:layout_constraintStart_toStartOf="@+id/details_name"
                     app:layout_constraintTop_toBottomOf="@+id/details_name"
@@ -85,7 +85,7 @@
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/gilroy_bold"
                     android:text="@string/details_desc_text"
-                    android:textColor="@color/black"
+                    android:textColor="@android:color/black"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
