Implement shopping cart functionality
Signed-off-by: ATechnoHazard <amolele@gmail.com>

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,7 @@
     </fragment>
     <fragment
         android:id="@+id/cartFragment"
-        android:name="org.firehound.wtplus.CartFragment"
+        android:name="org.firehound.wtplus.ui.cart.CartFragment"
         android:label="Cart"
         tools:layout="@layout/fragment_cart" />
 </navigation>
