Fix price not showing up for items in the cart
* Also make FABs match the theme

Signed-off-by: ATechnoHazard <amolele@gmail.com>

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -52,6 +52,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkout_fab_text"
+        android:textColor="@android:color/white"
+        app:iconTint="@android:color/white"
+        app:backgroundTint="@android:color/black"
         app:layout_anchor="@id/main_view"
         app:layout_anchorGravity="bottom|end"
         android:layout_margin="16dp"
