--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,5 +34,14 @@
         android:id="@+id/cartFragment"
         android:name="org.firehound.wtplus.ui.cart.CartFragment"
         android:label="Cart"
-        tools:layout="@layout/fragment_cart" />
+        tools:layout="@layout/fragment_cart" >
+        <action
+            android:id="@+id/action_cartFragment_to_checkoutFragment"
+            app:destination="@id/checkoutFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/checkoutFragment"
+        android:name="org.firehound.wtplus.ui.cart.CheckoutFragment"
+        android:label="Reservation"
+        tools:layout="@layout/fragment_checkout" />
 </navigation>
